# kk2-client-leptos

./: Cargo.toml  README.md  index.html
src/: fetch_api.rs  joke.rs  main.rs
