[package]
name = "kk2-client-leptos"
version = "0.1.0"
edition = "2024"

[dependencies]
gloo-net = "0.6.0"
leptos = { version = "0.8.2", features = ["csr"] }
send_wrapper = "0.6.0"
serde = { version = "1.0.219", features = ["derive"] }
web-sys = { version = "0.3.77", features = ["AbortController", "AbortSignal"] }
