[package]
name = "kk2-client-leptos"
version = "0.1.0"
edition = "2024"

[dependencies]
console_error_panic_hook = "0.1.7"
gloo-net = "0.6.0"
leptos = { version = "0.8.2", features = ["csr"] }
send_wrapper = "0.6.0"
serde = { version = "1.0.219", features = ["derive"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tracing-subscriber-wasm = "0.1.0"
web-sys = { version = "0.3.77", features = ["AbortController", "AbortSignal"] }
