[package]
name = "kk2-client-leptos"
version = "0.1.0"
edition = "2024"

[dependencies]
console_error_panic_hook = "0.1.7"
leptos = { version = "0.8.17", features = ["csr"] }
gloo-net = { version = "0.6", features = ["http"] }
send_wrapper = "0.6.0"
serde = { version = "1.0.228", features = ["derive"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
tracing-subscriber-wasm = "0.1.0"
web-sys = { version = "0.3.91", features = ["AbortController", "AbortSignal"] }
